# aut2ltl

./: .gitignore  CLAUDE.md  README.md  STATUS.md  TODO.md  aut2ltl.sh  buchi2ltl.py  evaluate.py  handoff_calculus.md  handoff_cascade.md  handoff_core.md  handoff_giventhat.md  handoff_measure.md  handoff_sosl.md  handoff_symbolic.md  handoff_symmetry.md  handoff_toltl.md  install.sh  install_gap.sh  oracle_litt.md  parse_last_session.py  pyproject.toml  roundtrip_status.md  stutterquotient.md  task_computelin.md
aut2ltl/: README.md  __init__.py  __main__.py  bounded.py  cli.py  combinators.py  compose.py  contract.py  first_success.py  language.py  options.py  printer.py  result.md  result.py  translator.py  twa.py  witness.py
buchi2ltl/: __init__.py  reconstruction.py  utils.py
cluster/: README.md  build_gap.sh  build_spot.sh  config.sh  (+12 more)
sos_sdd/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  accept.py  build_fix_spec.md  calculus.py  contract.py  engine.py  errors.py  hoa.py  install_deps.sh  letters.py  model.py  quotient.py  slotmodel.py
sos_sdd/src/: closure.hh  congruence.hh  crossing.hh  findings.hh  module.cpp  primitives.hh  residuals.hh  slotspace.hh  squaring.hh  stats.hh
sosl/: README.md  __init__.py  contract.py  pyproject.toml  trace.py
sosl/learn/: README.md  __init__.py  algorithm.md  chains.py  columns.py  export.py  learner.py  partition.py  saturate.py  table.py
sosl/objects/: README.md  __init__.py  algorithm.md  alphabet.py  canonical.py  cayley.py  invariant.py  lasso.py  residuals.py  serialize.py
sosl/reference/: README.md  __init__.py  algorithm.md  builder.py  residuals.py
sosl/sos/: README.md  __init__.py  alphabet.py  invariant.py  lasso.py
sosl/sos/core/: algorithm.md  canonical.py  closure.py  enriched.py  quotient.py
sosl/sos/io/: __init__.py  serialize.py
sosl/sos/logs/: _reference_input.hoa
sosl/sosl/: README.md  contract.py  trace.py
sosl/sosl/experiment/: README.md  __init__.py  baseline.py  driver.py  manifest.py  report.py  run.py  run_one.py  stats.py
sosl/sosl/learn/: README.md  algorithm.md  columns.py  evidence.py  export.py  learner.py  pairs.py  partition.py  saturate.py  table.py
sosl/sosl/quant/: README.md  __init__.py  algorithm.md  chain.py  distance.py  entropy.py  essential.py  kernel.py  mc.py  measure.py  product.py  routea.py  shadow.py  theta.py
sosl/sosl/sos/: README.md  __init__.py  algorithm.md  hypothesis.py  invariant.py  lasso.py  minimize.py  relabel.py  residuals.py
sosl/sosl/sos/calculus/: README.md  __init__.py  algorithm.md  align.py  decide.py  product.py  reduce.py  surgery.py  table.py  witness.py
sosl/sosl/sos/classify/: README.md  __init__.py  __main__.py  emit.py  record.py  stutter.py  witness.py
sosl/sosl/sos/classify/aperiodic/: __init__.py  orbit.py
sosl/sosl/sos/classify/chains/: __init__.py  engine.py
sosl/sosl/sos/classify/derive/: __init__.py  engine.py
sosl/sosl/sos/classify/io/: __init__.py  __main__.py  reader.py  vocab.py  writer.py
sosl/sosl/sos/classify/primitives/: __init__.py  green.py  idempotents.py
sosl/sosl/sos/classify/readoff/: __init__.py  ordinal.py  table.py
sosl/sosl/sos/classify/superchains/: __init__.py  engine.py
sosl/sosl/sos/core/: __init__.py  algorithm.md  canonical.py  congruence.py  quotient.py
sosl/sosl/sos/giventhat/: README.md  __init__.py  __main__.py  algorithm.md  interval.py  ladder.py  quotient.py  report.py  simplify.py  stutter.py
sosl/sosl/sos/io/: __init__.py  hoa.py  serialize.py
sosl/sosl/sos/symmetry/: README.md  __init__.py  algorithm.md  relations.py  sigma.py
sosl/sosl/sos/viz/: README.md  __init__.py  __main__.py  algorithm.md  dot.py  layout.py  model.py  render.py  tikz.py
sosl/sosl/teacher/: README.md  __init__.py  algorithm.md  equiv.py  exact.py  exact_ref.py  whitebox.py
sosl/sosl/validate/: README.md
sosl/teacher/: README.md  algorithm.md  equiv.py  exact.py  whitebox.py
sosl/tests/: .gitignore
sosl/tests/calculus/: README.md  align_gate.py  corpus_oracle.py  duality.py  example_gate.py  hulls.py  laws.py  obligation_oracle.py  product_gate.py  smoke.py  stutter.py  v1_align.py  v1_ops.py  v1_pipeline.py  v2_stutter.py  v3_blowup.py  v4_ladder.py  witness_min.py
sosl/tests/genaut/: README.md  complement.py  hoa_relabel.py  relabel_soundness.py  source_consistency.py
sosl/tests/giventhat/: dpt_examples.py  fixtures.py  gt2_summary.py  gt5_demo.py  interval_gate.py  ladder_gate.py
sosl/tests/quant/: fixtures.py  fixtures2.py  fixtures3.py  fixtures4.py  flip_gate.py  law_gate.py  m3_gate.py  m3b_gate.py  m4_gate.py  m5_gate.py  oracle_gate.py
sosl/tests/quant/figs/: cayley.py  fig1.py  fig2.py  fig2_draw.py  fig3.py  sources.py  tikz.py
sosl/tests/sos/: README.md  assemble.py  build_sos.py  canonical_hoa.py  render_svg.py  sos2cayley.py  test_complement.py  test_minimize.py  transition_based.py
sosl/tests/sosl/: README.md  associativity_fixture.py  campaign_e0.py  campaign_e3.py  campaign_e5.py  campaign_m4b.py  campaign_manifest.py  census_campaign.py  census_e1.py  census_e2_exhibits.py  census_e3.py  census_manifest.py  classify_aperiodic.py  classify_census.py  classify_chains.py  classify_escape.py  classify_fork.py  classify_primitives.py  classify_profile.py  classify_readoff.py  classify_record.py  classify_superchains.py  cluster_plan.py  congruence_audit.py  congruence_column.py  congruence_gate.py  contract_smoke.py  crash_unreachable.py  diag_export_vs_hyp.py  even_conformance.py  evenblocks_conformance.py  exact_closure_profile.py  exact_fixtures.py  exact_ref_census_check.py  exact_ref_gate.py  exact_ref_guard.py  exact_ref_oversize.py  exact_ref_residue.py  experiment_run.py  fault_verdict_probe.py  (+24 more)
sosl/tests/sosl/reference/: guard_firing_exhibit.md  witness_lock_exhibits.md
sosl/tests/sosl/reference/flat_canon/: e1_summary.md  e2_exhibits.md  e3_summary.md  gates.txt
sosl/tests/symmetry/: fixtures.py  relations_gate.py  sigma_gate.py  sy1_summary.py  sy3_summary.py
sosl/tests/symmetry/figs/: fig1.py  tikz.py
sosl/validate/: README.md
(+72525 files in other folders)
