# aut2ltl — package metadata (P-ARCH step 10, 2026-06-14).
# Python's nearest analog to a package manifest; pairs with the per-package
# __init__.py docstrings (the package-info equivalent) for documentation.

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aut2ltl"
version = "0.1.0"
description = "Automaton-to-LTL translation: a Krohn-Rhodes / holonomy-cascade engine (Boker–Lehtinen–Sickert, FoSSaCS 2022) and a backward-labeling heuristic engine, composed by a portfolio."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Yann Thierry-Mieg", email = "yann.thierrymieg@gmail.com" }]
keywords = ["LTL", "omega-automata", "Buchi", "Krohn-Rhodes", "holonomy", "temporal-logic"]

# pandas is the one pip-installable runtime dep (survey.diff.results — the
# result-CSV diff). The rest are system-level and NOT pip-installable, so
# intentionally omitted:
#   * Spot (the `spot` and `buddy` Python bindings) — install at system level.
#   * GAP 4.12+ with the SgpDec package — needed only by the bls cascade engine;
#     see README.md and install_gap.sh.
dependencies = ["pandas"]

[project.scripts]
# The portfolio front end (aut2ltl/__main__.py:main). Equivalent to `python3 -m aut2ltl`.
aut2ltl = "aut2ltl.__main__:main"
# The evaluation harness (survey.cli:main). Equivalent to `python3 -m survey`.
aut2ltl_survey = "survey.cli:main"

[tool.setuptools.packages.find]
include = ["aut2ltl*", "survey*"]
